# shops-API

./: .dockerignore  .env.example  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.test.yaml  docker-compose.yaml  manage.py  pyproject.toml  requirements.txt
.github/workflows/: project_ci.yml
shops_api/: asgi.py  settings.py  urls.py  wsgi.py
shops_api/shops/: admin.py  apps.py  filters.py  models.py  serializers.py  urls.py  views.py
shops_api/shops/migrations/: 0001_initial.py  0002_alter_shop_unique_together.py
shops_api/shops/tests/: tests_api.py
shops_api/shops/tests/fixtures/: cities.json  shops.json  streets.json
