[tool.poetry]
name = "shops_api"
version = "0.1.0"
description = "Test assignment for mediasoft.team. API for shops."
authors = ["Sergey Kim <<sergkim7@gmail.com>>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2"
djangorestframework = "^3.14.0"
python-dotenv = "^1.0.0"
pre-commit = "^3.2.2"
psycopg2-binary = "^2.9.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
